# ollama-tool-test

./: .gitignore  README.md  pyproject.toml  tool.py
